<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Geonotes</string>
    
    <string-array name="trigger_types">
        <item>Enter</item>
        <item>Leave</item>
    </string-array>
    
    <!-- Button text -->
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_in_button">Sign In</string>
    
    <!-- Notification text -->
    <string name="foreground_notification_ticker">Starting the Geonotes service.</string>
    <string name="foreground_notification_text">Select to disable the background service.</string>
    
    <!-- Dialogs -->
    <string name="loading_message">Loading, please wait&#8230;</string>
    <string name="authenticating_message">Authenticating, please wait&#8230;</string>
    <string name="dialog_gps_title">GPS is Disabled</string>
    <string name="dialog_gps_message">You should enable GPS to make sure your geonotes are received.</string>
    
    <!-- Activity titles -->
    <string name="settings_title">Settings</string>
    
    <!-- Fragments -->
    <string name="activity_list_title">ACTIVITY</string>
    <string name="layer_list_title">LAYERS</string>
    <string name="geonote_list_title">GEONOTES</string>
    <string name="empty_activity_list">You haven\'t received any messages.\n Try subscribing to some layers!</string>
    <string name="empty_layer_list">We couldn\'t find any layers.</string>
    <string name="empty_geonote_list">You have no pending geonotes.\n Tap the plus button to set a new geonote.</string>
    
    <!-- Menu items -->
    <string name="menu_create_geonote_title">Create Geonote</string>
    <string name="menu_refresh_title">Refresh</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_share_title">Share</string>
    
    <!-- Preference category titles -->
    <string name="general_category_title">General</string>
    <string name="tracking_category_title">Location</string>
    <string name="notification_category_title">Notifications</string>
    <string name="account_category_title">Account</string>
    <string name="about_category_title">About</string>
    
    <!-- Preference keys -->
    <string name="pref_key_tracker_status">tracker_status</string>
    <string name="pref_key_start_on_boot">start_on_boot</string>
    <string name="pref_key_vibrate">vibrate</string>
    <string name="pref_key_account_username">account_username</string>
    <string name="pref_key_app_version">app_version</string>
    <string name="pref_key_app_build">app_build</string>
    <string name="pref_key_sdk_version">sdk_version</string>
    <string name="pref_key_sdk_build">sdk_build</string>
    <string name="pref_key_privacy_policy">privacy_policy</string>
    
    <!-- Preference titles -->
    <string name="tracker_status_title">Enable location</string>
    <string name="start_on_boot_title">Enable on reboot</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="username_title">Sign in</string>
    <string name="app_version_title">App version</string>
    <string name="app_build_title">App build</string>
    <string name="sdk_version_title">SDK version</string>
    <string name="sdk_build_title">SDK build</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    
    <!-- Preference summaries -->
    <string name="start_on_boot_summary">Start the location service automatically</string>
    <string name="vibrate_summary">Vibrate when new items arrive</string>
    <string name="user_account_summary">Sign in as another user?</string>
    
    <!-- Error messages -->
    <string name="delete_geonote_error">Failed to delete Geonote!</string>
    <string name="invalid_email_error">Please enter a valid e-mail.</string>
    <string name="invalid_password_error">Please enter a valid password.</string>
    <string name="invalid_form_error">All fields are required!</string>
    <string name="invalid_message_error">Please enter a valid message!</string>
    
    <!-- Misc. copy -->
    <string name="anonymous_account_message">You\'re using Geoloqi anonymously.</string>
    <string name="existing_user_message">Already a Geoloqi user?</string>
    <string name="new_user_message">Need a Geoloqi account?</string>
    
    <string name="sign_up_title">Sign-Up</string>
    <string name="sign_in_title">Sign-In</string>
    <string name="new_geonote_title">New Geonote</string>
    
    <!-- Default strings -->
    <string name="short_lorem">Lorem ipsum dolor sit amet</string>
    <string name="long_lorem">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
